--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "theme_color": "#f5f5f5",
-  "background_color": "#3490b2",
+  "background_color": "#ffff",
   "icons": [
     {
       "purpose": "maskable",
@@ -20,7 +20,7 @@
   "dir": "auto",
   "lang": "en-US",
   "name": "Multishop KPI APP2",
-  "short_name": "multishop-app2",
+  "short_name": "Multishop-app2",
   "description": "This is a PWA powered by multishop",
   "start_url": "/"
 }
