--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "app/components/Dashboard.jsx"  ],
   "exclude": [
     "node_modules"
   ]
